app/yaml/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: demo
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: demo
